Portfolio-7 overflow-bug-fix

--- a/src/sections/home/Home.css
+++ b/src/sections/home/Home.css
@@ -2,6 +2,7 @@
     height: 80vh;
     z-index: 1;
     color: white;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 799px) {
