--- a/src/sections/scene/Scene.css
+++ b/src/sections/scene/Scene.css
@@ -10,7 +10,7 @@
   color: white;
   display: block;
   width: 100%;
-  height: 80%;
+  height: 80vh;
   display: flex;
   z-index: -1;
 }
@@ -959,3 +959,22 @@ ul.no-bullet {
     }
   }
 }
+
+@media screen and (max-width: 799px) {
+    .content-section {
+        height: 95vh;
+    }
+
+    .body-start {
+      position: absolute;
+      text-align: center;
+      font-family: "Myriad Pro";
+      color: white;
+      display: block;
+      width: 100%;
+      height: 95vh;
+      display: flex;
+      z-index: -1;
+    }
+}
+
